-Prepare for segue -Create 2nd UIViewController class

--- a/Emoji dictionary/Base.lproj/Main.storyboard
+++ b/Emoji dictionary/Base.lproj/Main.storyboard
@@ -41,10 +41,10 @@
             </objects>
             <point key="canvasLocation" x="372" y="32.833583208395808"/>
         </scene>
-        <!--View Controller-->
+        <!--Definition View Controller-->
         <scene sceneID="Pgy-g9-prT">
             <objects>
-                <viewController id="IMz-cm-VOe" sceneMemberID="viewController">
+                <viewController id="IMz-cm-VOe" customClass="DefinitionViewController" customModule="Emoji_dictionary" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fTh-rg-HwF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
