--- a/Emoji dictionary/Base.lproj/Main.storyboard
+++ b/Emoji dictionary/Base.lproj/Main.storyboard
@@ -61,17 +61,35 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category: Smiley" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XPE-h6-iTO">
+                                <rect key="frame" x="122.5" y="434" width="130" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BirthYear : 2017" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJa-uV-6BN">
+                                <rect key="frame" x="127.5" y="475" width="120" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="VdI-0P-6W9" firstAttribute="top" secondItem="Shp-si-Umj" secondAttribute="bottom" constant="50" id="FNM-8b-aRT"/>
+                            <constraint firstItem="FJa-uV-6BN" firstAttribute="centerX" secondItem="fTh-rg-HwF" secondAttribute="centerX" id="GLM-wn-qcS"/>
                             <constraint firstItem="VdI-0P-6W9" firstAttribute="centerX" secondItem="fTh-rg-HwF" secondAttribute="centerX" id="Otm-fp-Jzs"/>
+                            <constraint firstItem="XPE-h6-iTO" firstAttribute="top" secondItem="VdI-0P-6W9" secondAttribute="bottom" constant="20" id="Q1q-DR-EMa"/>
+                            <constraint firstItem="FJa-uV-6BN" firstAttribute="top" secondItem="XPE-h6-iTO" secondAttribute="bottom" constant="20" id="qDN-ix-EEm"/>
                             <constraint firstItem="Shp-si-Umj" firstAttribute="centerX" secondItem="fTh-rg-HwF" secondAttribute="centerX" id="scQ-z6-Nmy"/>
+                            <constraint firstItem="XPE-h6-iTO" firstAttribute="centerX" secondItem="fTh-rg-HwF" secondAttribute="centerX" id="yKr-RC-SUO"/>
                             <constraint firstItem="Shp-si-Umj" firstAttribute="top" secondItem="muI-rK-PvA" secondAttribute="top" constant="40" id="yME-zT-7Ll"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="muI-rK-PvA"/>
                     </view>
                     <connections>
+                        <outlet property="BirthYearLabel" destination="FJa-uV-6BN" id="9xS-MU-ii3"/>
+                        <outlet property="categoryLabel" destination="XPE-h6-iTO" id="y9g-Ij-cCD"/>
                         <outlet property="definitionLabel" destination="VdI-0P-6W9" id="A8I-6f-QEf"/>
                         <outlet property="emojiLabel" destination="Shp-si-Umj" id="WFZ-og-2in"/>
                     </connections>
